--- a/dev/index.html
+++ b/dev/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title hello 00-06</title>
 </head>
 <body>
-    Hello World
+    <div id="app"></div>
 </body>
 </html>
