try to add some react cpmponents

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title hello 23-30</title>
+    <title>Test React 1</title>
 </head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="bundle.min.js"></script></body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
