--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title hello 00-06</title>
+    <title>Test React 1</title>
 </head>
 <body>
     <div id="app"></div>
