--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test React 1</title>
-</head>
+    <title>Test React 1:46</title>
+<link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
 <script type="text/javascript" src="bundle.js"></script></body>
