--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test React 1:46</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Одностраничное приложение - Тест Рейса</title>
+
 </head>
 <body>
     <div id="app"></div>
