--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test React 1:46</title>
-<link href="style.css" rel="stylesheet"></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Одностраничное приложение - Тест Рейса</title>
+
+<link href="style.min.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
