--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Одностраничное приложение - Тест Рейса</title>
+    <style>
 
+        .move-appear {    transform: translate3D(100%, 0, 0);}
+        .move-appear-active {    transform: translate3D(0, 0, 0); transition: all 1000ms ease-out;}
+
+
+        .move-enter {opacity: 0; background: red;}
+        .move-enter-active {opacity: 1; transition: all 6000ms ease-in;}
+        .move-leave {opacity: 1; background: green;}
+        .move-leave-active {opacity: 0;transition: all 6000ms ease-in;}
+    </style>
 </head>
 <body>
     <div id="app"></div>
