--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Одностраничное приложение - Тест Рейса</title>
+    <style>
 
-<link href="style.min.css" rel="stylesheet"></head>
+        .move-appear {    transform: translate3D(100%, 0, 0);}
+        .move-appear-active {    transform: translate3D(0, 0, 0); transition: all 1000ms ease-out;}
+
+
+        .move-enter {opacity: 0; background: red;}
+        .move-enter-active {opacity: 1; transition: all 6000ms ease-in;}
+        .move-leave {opacity: 1; background: green;}
+        .move-leave-active {opacity: 0;transition: all 6000ms ease-in;}
+    </style>
+<link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="bundle.min.js"></script></body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
