--- a/dev/index.html
+++ b/dev/index.html
@@ -6,14 +6,32 @@
     <title>Одностраничное приложение - Тест Рейса</title>
     <style>
 
+        /*  -= Default =- */
         .move-appear {    transform: translate3D(100%, 0, 0);}
         .move-appear-active {    transform: translate3D(0, 0, 0); transition: all 1000ms ease-out;}
 
+        .move-enter {opacity: 1; background: #ffccc2; transform: translate3D(100%, 0, 0);  position: absolute;}
+        .move-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 1000ms ease-out;  position: absolute;}
+        .move-leave {opacity: 1; }
+        .move-leave-active {transform: translate3D(-100%, 0, 0); opacity: 1;transition: all 1000ms ease-out; }
 
-        .move-enter {opacity: 1; background: red;}
-        .move-enter-active {transform: translate3D(-100%, 0, 0); opacity: 1; transition: all 500ms ease-in;}
-        .move-leave {opacity: 1; background: green;}
-        .move-leave-active {transform: translate3D(-100%, 0, 0); opacity: 1;transition: all 1000ms ease-in;}
+        /*  -= Next =- */
+        .move-next-appear {    transform: translate3D(100%, 0, 0);}
+        .move-next-appear-active {    transform: translate3D(0, 0, 0); transition: all 1000ms ease-out;}
+
+        .move-next-enter {opacity: 1; background: transparent; transform: translate3D(100%, 0, 0);  position: absolute;}
+        .move-next-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 1000ms ease-out;  }
+        .move-next-leave {opacity: 1; }
+        .move-next-leave-active {transform: translate3D(-100%, 0, 0); opacity: 1;transition: all 1000ms ease-out; }
+
+        /*  -= Prev =- */
+        .move-prev-appear {    transform: translate3D(100%, 0, 0);}
+        .move-prev-appear-active {    transform: translate3D(0, 0, 0); transition: all 1000ms ease-out;}
+
+        .move-prev-enter {opacity: 1; background: transparent; transform: translate3D(-100%, 0, 0);  position: absolute;}
+        .move-prev-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 1000ms ease-out; }
+        .move-prev-leave {opacity: 1; }
+        .move-prev-leave-active {transform: translate3D(100%, 0, 0); opacity: 1;transition: all 1000ms ease-out; }
     </style>
 </head>
 <body>
