add beautiful and hardful animation to select bar

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Одностраничное приложение - Тест Рейса</title>
     <style>
-        #brick {
-            width: 40px;
-            height: 20px;
-            background: #EE6B47;
-            position: relative;
-            cursor: pointer;
-        }
-
-        #path {
-            outline: 1px solid #E8C48E;
-            width: 540px;
-            height: 20px;
-        }
 
         /*  -= Default =- */
         .move-appear {    transform: translate3D(100%, 0, 0);}
@@ -46,8 +33,8 @@
         .move-prev-leave {opacity: 1; }
         .move-prev-leave-active {transform: translate3D(100%, 0, 0); opacity: 1;transition: all 700ms ease-out; }
     </style>
-<link href="style.css" rel="stylesheet"></head>
+<link href="style.min.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
