--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,163 @@
         .move-prev-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 700ms ease-out; }
         .move-prev-leave {opacity: 1; }
         .move-prev-leave-active {transform: translate3D(100%, 0, 0); opacity: 1;transition: all 700ms ease-out; }
+
+        /* New Bar Styles*/
+        .input-range .input-range__slider {
+            appearance: none;
+            background: #3f51b5;
+            border: 1px solid #3f51b5;
+            border-radius: 100%;
+            cursor: pointer;
+            display: block;
+            height: 2rem;
+            margin-left: -2.5rem;
+            margin-top: -1.5rem;
+            position: absolute;
+            top: 50%;
+            transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+            width: 5rem;
+        }
+        .input-range__slider:active {
+            transform: scale(1.3); }
+        .input-range__slider:focus {
+            box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2); }
+        .input-range--disabled .input-range__slider {
+            background: #cccccc;
+            border: 1px solid #cccccc;
+            box-shadow: none;
+            transform: none; }
+
+        .input-range__slider-container {
+            transition: left 0.3s ease-out; }
+
+        .input-range__label {
+            color: #aaaaaa;
+            font-family: "Helvetica Neue", san-serif;
+            font-size: 0.8rem;
+            transform: translateZ(0);
+            white-space: nowrap; }
+
+        .input-range__label--min,
+        .input-range__label--max {
+            bottom: -1.4rem;
+            position: absolute; }
+
+        .input-range__label--min {
+            left: 0; }
+
+        .input-range__label--max {
+            right: 0; }
+
+        .input-range__label--value {
+            position: absolute;
+            top: -1.8rem; }
+
+        .input-range__label-container {
+            left: -50%;
+            position: relative; }
+        .input-range__label--max .input-range__label-container {
+            left: 50%; }
+
+        .input-range__track {
+            background: #eeeeee;
+
+            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
+            background: #ffffff; /* Old browsers */
+            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,eeeeee+17,ffffff+17,ffffff+20,eeeeee+20,eeeeee+37,ffffff+37,ffffff+40,eeeeee+40,eeeeee+57,ffffff+57,ffffff+60,eeeeee+60,eeeeee+77,ffffff+77,ffffff+80,eeeeee+80,eeeeee+100 */
+            background: #eeeeee; /* Old browsers */
+            background: -moz-linear-gradient(
+                    left,
+                    #eeeeee 0%,
+                    #eeeeee 18%,
+                    #ffffff 18%,
+                    #ffffff 20.5%,
+                    #eeeeee 20.5%,
+                    #eeeeee 38.5%,
+                    #ffffff 38.5%,
+                    #ffffff 41%,
+                    #eeeeee 41%,
+                    #eeeeee 59%,
+                    #ffffff 59%,
+                    #ffffff 61.5%,
+                    #eeeeee 61.5%,
+                    #eeeeee 79.5%,
+                    #ffffff 79.5%,
+                    #ffffff 82%,
+                    #eeeeee 82%,
+                    #eeeeee 100%
+            ); /* FF3.6-15 */
+            background: -webkit-linear-gradient(
+                    left,
+                    #eeeeee 0%,
+                    #eeeeee 18%,
+                    #ffffff 18%,
+                    #ffffff 20.5%,
+                    #eeeeee 20.5%,
+                    #eeeeee 38.5%,
+                    #ffffff 38.5%,
+                    #ffffff 41%,
+                    #eeeeee 41%,
+                    #eeeeee 59%,
+                    #ffffff 59%,
+                    #ffffff 61.5%,
+                    #eeeeee 61.5%,
+                    #eeeeee 79.5%,
+                    #ffffff 79.5%,
+                    #ffffff 82%,
+                    #eeeeee 82%,
+                    #eeeeee 100%
+            ); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(
+                    to right,
+                    #eeeeee 0%,
+                    #eeeeee 18%,
+                    #ffffff 18%,
+                    #ffffff 20.5%,
+                    #eeeeee 20.5%,
+                    #eeeeee 38.5%,
+                    #ffffff 38.5%,
+                    #ffffff 41%,
+                    #eeeeee 41%,
+                    #eeeeee 59%,
+                    #ffffff 59%,
+                    #ffffff 61.5%,
+                    #eeeeee 61.5%,
+                    #eeeeee 79.5%,
+                    #ffffff 79.5%,
+                    #ffffff 82%,
+                    #eeeeee 82%,
+                    #eeeeee 100%
+            ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=1 );
+            /* IE6-9 */
+            border-radius: 0.3rem;
+            cursor: pointer;
+            display: block;
+            height: 0.3rem;
+            height: 1rem;
+            position: relative;
+            transition: left 0.3s ease-out, width 0.3s ease-out; }
+        .input-range--disabled .input-range__track {
+            background: #eeeeee; }
+
+        .input-range__track--background {
+            left: 0;
+            margin-top: -0.15rem;
+            position: absolute;
+            right: 0;
+            top: 50%; }
+
+        .input-range__track--active {
+            background: #3f51b5;
+            background: #3fd84770;}
+
+        .input-range {
+            height: 1rem;
+            position: relative;
+            width: 100%; }
+
+
     </style>
 <link href="style.min.css" rel="stylesheet"></head>
 <body>
