change title, add new tasks to readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>React Parcel Micro App</title>
+    <title>Reiss Test - Мотивационный тест</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
