--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Reiss Test - Мотивационный тест</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
