--- a/src/core/send.html
+++ b/src/core/send.html
@@ -2,18 +2,19 @@
 <html>
       <head>
          <meta charset="utf-8"/>
-         <title>Заявка на обратный звонок</title>
+         <title>Сообщение с сайта Тест Рисса</title>
       </head>
 <body>
       <table width="100%" cellpadding="40" cellspacing="0" align="center" bgcolor="fff" style="">
          <tr>
-            <td style="padding: 100px 0 0 90px; vertical-align: top;">
+            <td style="padding: 40px 0 0 20px; vertical-align: top;">
                <table id="header" cellpadding="20" cellspacing="0" width="600" align="center" bgcolor="ffffff">
                </table><!-- header -->
          
-               <table id="content" cellpadding="0" cellspacing="15" bgcolor="ffffff" width="600" align="center">
-			    <p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Отправитель письма - <b>{title}</b></p>
-				<p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Телефон клиента -  <b>{body}</b></p>
+               <table id="content" cellpadding="0" cellspacing="15" bgcolor="ffffff" width="600" align="center" style="background-color: white">
+			    <p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Отправитель письма - <b>{email}</b></p>
+				<p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Текст письма:</p>
+				<p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">{message}</p>
                </table><!-- content -->
             </td>
          </tr>
