--- a/src/core/send.html
+++ b/src/core/send.html
@@ -5,7 +5,7 @@
          <title>Сообщение с сайта Тест Рисса</title>
       </head>
 <body>
-      <table width="100%" cellpadding="40" cellspacing="0" align="center" bgcolor="fff" style="">
+      <table width="100%" cellpadding="40" cellspacing="0" align="center" bgcolor="fff" style="background-color: #ffffff;" >
          <tr>
             <td style="padding: 40px 0 0 20px; vertical-align: top;">
                <table id="header" cellpadding="20" cellspacing="0" width="600" align="center" bgcolor="ffffff">
