--- a/src/core/send.html
+++ b/src/core/send.html
@@ -5,20 +5,9 @@
          <title>Сообщение с сайта Тест Рисса</title>
       </head>
 <body>
-      <table width="100%" cellpadding="40" cellspacing="0" align="center" bgcolor="fff" style="background-color: #ffffff;" >
-         <tr>
-            <td style="padding: 40px 0 0 20px; vertical-align: top;">
-               <table id="header" cellpadding="20" cellspacing="0" width="600" align="center" bgcolor="ffffff">
-               </table><!-- header -->
-         
-               <table id="content" cellpadding="0" cellspacing="15" bgcolor="ffffff" width="600" align="center" style="background-color: white">
-			    <p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Отправитель письма - <b>{email}</b></p>
-				<p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">Текст письма:</p>
-				<p style="font-size: 18px; font-family: 'Comic Sans MS', cursive, sans-serif; margin-bottom: 0;">{message}</p>
-               </table><!-- content -->
-            </td>
-         </tr>
-      </table>
+    <p style="font-size: 18px;">Отправитель письма - <b>{email}</b></p>
+    <p style="font-size: 18px;">Текст письма:<br>
+        {message}
+    </p>
 </body>
 </html>
-
